fix: Fix horizontal scrollbar visible for vertical scroll indicator in Chromium

--- a/packages/js-draw/src/toolbar/widgets/components/makeSnappedList.scss
+++ b/packages/js-draw/src/toolbar/widgets/components/makeSnappedList.scss
@@ -37,7 +37,7 @@
 	}
 
 	> .page-markers {
-		overflow-y: hidden;
+		overflow: hidden;
 
 		display: flex;
 		flex-direction: column;
